--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="coolpics/coolpics.html">Coolpics</a>
     <a href="mission/index.html">Mission</a>
     <a href="Blog/index.html">Book Blog</a>
+    <a href="Credit Cards/index.html">Credit Cards</a>
 </body>
 </html>
