--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="mission/index.html">Mission</a>
     <a href="Blog/index.html">Book Blog</a>
     <a href="Credit Cards/index.html">Credit Cards</a>
+    <a href="Register/index.html">Register</a>
 </body>
 </html>
